[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/popups/first_time/SystemsSection.gd" type="Script" id=1]
[ext_resource path="res://scenes/popups/first_time/SystemTrees.gd" type="Script" id=2]
[ext_resource path="res://scenes/popups/first_time/SystemInfo.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/utils/ScrollHandler.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui_nodes/AccessibilityFocus.gd" type="Script" id=5]
[ext_resource path="res://scenes/popups/first_time/SystemWarning.gd" type="Script" id=6]

[node name="SystemsSection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="IntroLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
offset_right = 1024.0
offset_bottom = 31.0
size_flags_vertical = 0
text = "Pick the systems you wish to support, so RetroHub can create folders for you to place games on already.
You can always add/configure/remove these later (and even add custom systems!)."
align = 1
valign = 1
autowrap = true

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/IntroLabel"]
script = ExtResource( 5 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 35.0
offset_right = 1024.0
offset_bottom = 39.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 43.0
offset_right = 1024.0
offset_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Categories" type="Tree" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_right = 150.0
offset_bottom = 509.0
custom_minimum_size = Vector2( 150, 0 )
size_flags_vertical = 3
column_titles_visible = true
hide_folding = true
hide_root = true

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/HBoxContainer/Categories"]
script = ExtResource( 5 )

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
offset_left = 154.0
offset_right = 158.0
offset_bottom = 509.0

[node name="SystemTrees" type="Control" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 162.0
offset_right = 342.0
offset_bottom = 509.0
custom_minimum_size = Vector2( 180, 0 )
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Consoles" type="Tree" parent="VBoxContainer/HBoxContainer/SystemTrees"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
focus_neighbor_left = NodePath("../../Categories")
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_folding = true

[node name="ScrollHandler" type="Control" parent="VBoxContainer/HBoxContainer/SystemTrees/Consoles"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 4 )

[node name="Arcades" type="Tree" parent="VBoxContainer/HBoxContainer/SystemTrees"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
focus_neighbor_left = NodePath("../../Categories")
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_folding = true

[node name="ScrollHandler" type="Control" parent="VBoxContainer/HBoxContainer/SystemTrees/Arcades"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 4 )

[node name="Computers" type="Tree" parent="VBoxContainer/HBoxContainer/SystemTrees"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
focus_neighbor_left = NodePath("../../Categories")
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_folding = true

[node name="ScrollHandler" type="Control" parent="VBoxContainer/HBoxContainer/SystemTrees/Computers"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 4 )

[node name="Engines" type="Tree" parent="VBoxContainer/HBoxContainer/SystemTrees"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
focus_neighbor_left = NodePath("../../Categories")
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_folding = true

[node name="ScrollHandler" type="Control" parent="VBoxContainer/HBoxContainer/SystemTrees/Engines"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 4 )

[node name="ModernConsoles" type="Tree" parent="VBoxContainer/HBoxContainer/SystemTrees"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
focus_neighbor_left = NodePath("../../Categories")
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_folding = true

[node name="ScrollHandler" type="Control" parent="VBoxContainer/HBoxContainer/SystemTrees/ModernConsoles"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 4 )

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
offset_left = 346.0
offset_right = 350.0
offset_bottom = 509.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
offset_left = 354.0
offset_right = 1024.0
offset_bottom = 509.0
size_flags_horizontal = 3

[node name="SystemInfo" parent="VBoxContainer/HBoxContainer/ScrollContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 670.0
offset_bottom = 509.0

[node name="NextButton" type="Button" parent="VBoxContainer"]
offset_top = 556.0
offset_right = 1024.0
offset_bottom = 576.0
text = "Next"

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/NextButton"]
script = ExtResource( 5 )

[node name="SystemWarning" type="AcceptDialog" parent="."]
unique_name_in_owner = true
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = -166.5
offset_right = 268.0
offset_bottom = 166.5
script = ExtResource( 6 )

[node name="Label2" type="Label" parent="SystemWarning"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -36.0
text = "This system has games, and therefore can't be removed.

If you wish to remove this system, delete the game files inside it, and either delete the folder manually or from RetroHub."
align = 1
valign = 1
autowrap = true

[node name="AccessibilityFocus" type="Node" parent="SystemWarning/Label2"]
script = ExtResource( 5 )

[connection signal="cell_selected" from="VBoxContainer/HBoxContainer/Categories" to="." method="_on_Categories_cell_selected"]
[connection signal="item_activated" from="VBoxContainer/HBoxContainer/Categories" to="." method="_on_Categories_item_activated"]
[connection signal="system_selected" from="VBoxContainer/HBoxContainer/SystemTrees" to="." method="_on_SystemTrees_system_selected"]
[connection signal="item_activated" from="VBoxContainer/HBoxContainer/SystemTrees/Consoles" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Consoles_item_activated"]
[connection signal="item_edited" from="VBoxContainer/HBoxContainer/SystemTrees/Consoles" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Consoles_item_edited"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/SystemTrees/Consoles" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Consoles_item_selected"]
[connection signal="item_activated" from="VBoxContainer/HBoxContainer/SystemTrees/Arcades" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Arcades_item_activated"]
[connection signal="item_edited" from="VBoxContainer/HBoxContainer/SystemTrees/Arcades" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Arcades_item_edited"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/SystemTrees/Arcades" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Arcades_item_selected"]
[connection signal="item_activated" from="VBoxContainer/HBoxContainer/SystemTrees/Computers" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Computers_item_activated"]
[connection signal="item_edited" from="VBoxContainer/HBoxContainer/SystemTrees/Computers" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Computers_item_edited"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/SystemTrees/Computers" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Computers_item_selected"]
[connection signal="item_activated" from="VBoxContainer/HBoxContainer/SystemTrees/Engines" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Engines_item_activated"]
[connection signal="item_edited" from="VBoxContainer/HBoxContainer/SystemTrees/Engines" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Engines_item_edited"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/SystemTrees/Engines" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_Engines_item_selected"]
[connection signal="item_activated" from="VBoxContainer/HBoxContainer/SystemTrees/ModernConsoles" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_ModernConsoles_item_activated"]
[connection signal="item_edited" from="VBoxContainer/HBoxContainer/SystemTrees/ModernConsoles" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_ModernConsoles_item_edited"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/SystemTrees/ModernConsoles" to="VBoxContainer/HBoxContainer/SystemTrees" method="_on_ModernConsoles_item_selected"]
[connection signal="pressed" from="VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="about_to_popup" from="SystemWarning" to="SystemWarning" method="_on_SystemWarning_about_to_show"]
